methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:2: error: illegal start of simple pattern
var:bonChemin:Boolean=false
   ^SlugTracking:7: error: '=' expected but ';' found.
def isFacingTrail():Boolean = {
^