methods.slug.SlugTracking.scala.code
var:bonChemin:Boolean=false




def isFacingTrail():Boolean = {
  while (estSurBiscuit()==false){
    if (getCouleurSol()==Color.green){
      avance()
    
    																	}
    else{
      avance()
      
    }

      
    
  																}
    
																}